[package]
name = "rust-mqtt"
version = "0.1.5"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2021"
resolver = "2"
description = "Rust no_std MQTT client"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/obabec/rust-mqtt"

[dependencies]
defmt = { version = "0.3", optional = true }
heapless = "0.7.10"
rand_core = "0.6.0"

[dev-dependencies]
env_logger = "0.9.0"
serial_test = "0.6.0"

[features]
no_std = ["defmt"]
tls = []
