[package]
name = "rust-mqtt-fork"
version = "0.2.0"
authors = ["Nathan Marley <nathan.marley@gmail.com>"]
edition = "2021"
description = "Rust no_std MQTT client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nmarley/rust-mqtt"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-io = "0.5.0"
heapless = "0.7.10"
rand_core = "0.6.0"

[dev-dependencies]
env_logger = "0.9.0"
serial_test = "0.6.0"

[features]
no_std = ["defmt"]
tls = []
